minor changes for code standard
minor changes for code standard